# cmake-template

./: .gitignore  .gitmodules  CMakeLists.txt  CppCheckSuppressions.txt  README.md  main.cpp  run-check.sh
includes/: add.h  add.hpp
my_lib/: CMakeLists.txt
my_lib/include/: add.h
my_lib/src/: add.c
src/: add.cpp  add_test.cpp
unit_test/: add_test.cpp
